# datacurve

./: .gitignore  =7.0.0  CLAUDE.md  Dockerfile  PLAN.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
api/: errors.py  main.py
api/routes/: blobs.py  traces.py
core/: blob_store.py  config.py  models.py  redaction.py  validation.py
db/: models.py  session.py
docs/: ACCEPTANCE.md  RUBRIC.md  SPEC.md
scripts/: demo_e2e.py  demo_e2e_real_repo.py
tests/: test_api.py  test_judge.py  test_models.py  test_placeholder.py  test_storage.py  test_worker.py
worker/: celery_app.py
worker/tasks/: __init__.py  finalize_qa.py  judge.py  test_runner.py
